# ai-coder

./: README.md  TMWebDriver.py  _test_approver.mjs  agent_loop.py  agents.py  ga  ga.py  launch.pyw  llmcore.py  mykey.py  mykey_template.py  package-lock.json  package.json  simphtml.py  test  tsconfig.json  tsup.config.ts  vitest.config.ts
assets/: agent_bbs.py  configure_mykey.py  ga_install.ps1  ga_install.sh  global_mem_insight_template.txt  supergrok_proxy.py  tools_schema.json  tools_schema_cn.json
frontends/: at_complete.py  btw_cmd.py  chatapp_common.py  conductor.html  conductor.py  continue_cmd.py  cost_tracker.py  dcapp.py  desktop_bridge.py  export_cmd.py  fsapp.py  keysym.py  model_cmd.py  plan_state.py  qqapp.py  review_cmd.py  session_names.py  slash_cmds.py  stapp.py  tgapp.py  tui_v3.py  tuiapp.py  tuiapp_v2.py  wechatapp.py  workspace_cmd.py  worldline.py
frontends/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontends/desktop/src-tauri/capabilities/: default.json
frontends/desktop/src-tauri/icons/: icon.icns
frontends/desktop/src-tauri/permissions/: bridge-commands.toml
frontends/desktop/src-tauri/src/: lib.rs  main.rs
memory/: adb_ui.py  autonomous_operation_sop.md  checklist_helper.py  checklist_sop.md  code_review_principles.md  computer_use.md  file_access_stats.json  github_contribution_sop.md  global_mem_insight.txt  goal_hive_master_duty.md  goal_hive_sop.md  goal_mode_sop.md  incubator_sop.md  keychain.py  ljqCtrl.py  ljqCtrl_sop.md  macljqCtrl.py  memory_cleanup_sop.md  morphling_sop.md  plan_sop.md  review_sop.md  (+9 more)
(+87 files in other folders)
