[package]
name = "ga-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"

[lib]
name = "ga_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
